Fix for Bug #27762: SCO Openserver doesn't have S_ISSOCK Possible side effect from this is that CLI scripts run from inetd won't realize that stdin/stdout are sockets.  But thats not our problem.